--- a/index.html
+++ b/index.html
@@ -226,17 +226,19 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-6 order-md-2">
-            <img src="IMG_5256.jpeg" alt="picture of me" class="img-responsive"></img><br>
+            <img src="tearoom.jpeg" alt="picture of me" class="img-responsive"></img><br>
             <h4 class="fw-normal text-muted mb-3">The works of a student studying Web Design</h4>
           </div>
           <div class="col-md-6 order-md-1">
 
             <h1 class="fw-normal text mb-3">Katelen Valdez</h1>
             <h1 class="fw-normal text-muted mb-3">About Me</h1>
-            <p class="lead">I'm Katelen Valdez, a passionate web design student dedicated to creating engaging and user-friendly digital experiences. My journey into web design began with a curiosity for technology and a desire to blend creativity with functionality.</p>
-            <p class="lead">With a keen eye for design and a strong foundation in HTML, CSS, and JavaScript, I strive to craft websites and applications that not only look beautiful but also deliver seamless functionality and optimal user experience.</p>
-            <p class="lead">Driven by a constant desire to learn and grow, I am always exploring new technologies and design trends to stay ahead in the ever-evolving field of web development. Whether it's building responsive layouts, optimizing performance, or experimenting with new frameworks, I'm always up for a challenge.</p>
-            <p class="lead">When I'm not coding, you can find me exploring nature, working out at the gym, or trying new coffee shops. I believe that inspiration can be found everywhere, and I draw from diverse experiences to fuel my creativity.</p>
+            <p class="lead">I’m Katelen Valdez, a passionate web designer committed to crafting engaging and user-friendly digital experiences. My path to web design was unconventional; I started in health science at the University of Central Florida with dreams of becoming a doctor. However, my childhood love for drawing and painting resurfaced, leading me to realize I wanted to channel my creativity in a new direction.</p>
+            <p class="lead">Intrigued by how websites are built and the interplay of functionality and design, I switched my major to web design after two years, and I haven’t looked back since. The thrill of creating impactful user experiences excites me, and I find immense joy in helping people online.</p>
+            <p class="lead">With a keen eye for design and solid skills in HTML, CSS, and JavaScript, I strive to build websites and applications that are not only visually appealing but also offer seamless functionality and an optimal user experience.</p>
+            <p class="lead">I’m driven by a continuous desire to learn and grow, always exploring new technologies and design trends to stay ahead in the ever-evolving web development field. Whether it’s creating responsive layouts, optimizing performance, or experimenting with new frameworks, I’m ready for any challenge.
+
+          Outside of coding, you’ll find me exploring nature, weightlifting, or discovering new coffee shops. I believe inspiration is everywhere, and I draw from diverse experiences to fuel my creativity.</p>
           </div>
         </div>
       </div>
